fix(simpleTable): adjust css truncating

--- a/src/components/simple-table/SimpleTableRow.module.scss
+++ b/src/components/simple-table/SimpleTableRow.module.scss
@@ -47,9 +47,6 @@ $cellMinWidth: var(--amino-cell-min-width);
           padding: 12px;
           width: 100%;
           height: 100%;
-          display: block;
-          overflow: hidden;
-          text-overflow: ellipsis;
         }
       }
 
